fix: Add run command for building package

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -184,6 +184,7 @@ jobs:
         env:
           TARGET: "${{ matrix.target }}"
           BINARY: "${{ inputs.binary-name }}"
+        run: cross build --release "--target=$TARGET"
       - name: "Build for target ${{ matrix.target }} and check for reproducibility"
         env:
           TARGET: "${{ matrix.target }}"
