--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -10,7 +10,7 @@ on:
       target-regex:
         description: 'Only build targets matching such regex.'
         type: string
-        default: "^([^-]+)-([^-]+)-([^-]+)(?:-([^-]+))?$"
+        default: "^([^-]+)-([^-]+)-([^-]+)(-([^-]+))?$"
       binary-name:
         description: 'Rust package name'
         required: true
@@ -136,7 +136,9 @@ jobs:
       - name: "Generate release notes"
         id:   cog
         run: |
-              changelog="$(cog changelog --template full_hash --at "$(git describe --tags --abbrev=0)" 2>&1)"
+              changelog="$(cog changelog --template full_hash --at "$(git describe --tags --abbrev=0)" 2>&1 \
+                || git log --oneline \
+                  "$(git describe --tags --abbrev=0 "$(git describe --tags --abbrev=0)"^)..$(git describe --tags --abbrev=0)")"
               {
                 echo "changelog<<EOF"
                 echo "${changelog/EOF/}"
