--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -187,16 +187,17 @@ jobs:
           BINARY: "${{ inputs.binary-name }}"
         run: cross build --release "--target=$TARGET"
       - name: "Build for target ${{ matrix.target }} and check for reproducibility"
+        if:   "${{ inputs.test-reproducibility }}"
         env:
           TARGET: "${{ matrix.target }}"
           BINARY: "${{ inputs.binary-name }}"
         run: |
               cross-util run "--target=$TARGET" -- \
-                sudo apt-get install --yes reprotest
+                "sudo apt-get install --yes reprotest"
               if \
                 cross-util run "--target=$TARGET" -- \
-                reprotest "cargo build --release \"--target=$TARGET\" \"--package=$BINARY\"" \
-                "targets/${TARGET}/release/${BINARY}"\
+                "reprotest \"cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\"\" \
+                \"targets/${TARGET}/release/${BINARY}\""\
               ; then
                 echo "REPRODUCIBLE=true" >> "$GITHUB_ENV"
               else
