--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -147,7 +147,7 @@ jobs:
       - name: "Generate release notes"
         id:   cog
         run: |
-              changelog="$(cog changelog --template full_hash --at "$(git describe --tags --abbrev=0)" \
+              changelog="$(cog changelog --template full_hash --at "$(git rev-list -n 1 "$(git describe --tags --abbrev=0)")" \
                 || (echo "#### Commits"; git log --oneline \
                   "$(git describe --tags --abbrev=0 "$(git describe --tags --abbrev=0)"^)..$(git describe --tags --abbrev=0)"))"
               {
