--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -112,7 +112,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: "Install cocogitto"
         env:
-          RUSTFLAGS: "-C opt-level=0 -C panic=abort -C target-cpu=native"
+          RUSTFLAGS: "-C opt-level=0 -C lto=off -C panic=abort -C target-cpu=native"
         run:  cargo install cocogitto
       - name: "Generate release notes"
         id:   cog
@@ -159,7 +159,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: "Install cross-compilation tool"
         env:
-          RUSTFLAGS: "-C opt-level=0 -C panic=abort -C target-cpu=native"
+          RUSTFLAGS: "-C opt-level=0 -C lto=off -C panic=abort -C target-cpu=native"
         run:  cargo install cross --git "https://github.com/cross-rs/cross"
       - name: "Build for target ${{ matrix.target }}"
         if:   "${{ !inputs.test-reproducibility }}"
