feat: Add initial templating support

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -99,7 +99,7 @@ jobs:
               echo -n "filtered_targets=" >> "$GITHUB_OUTPUT"
               echo -n "$filtered" | jq --raw-input --slurp --compact-output 'split(";")' >> "$GITHUB_OUTPUT"
 
-  generate-changelog:
+  generate-releasenotes:
     name: "Generate changelog from Semantic Commits"
     runs-on: ubuntu-latest
     outputs:
@@ -114,7 +114,7 @@ jobs:
         env:
           RUSTFLAGS: "-C opt-level=0 -C panic=abort -C target-cpu=native"
         run:  cargo install cocogitto
-      - name: "Generate release notes"
+      - name: "Generate changelog"
         id:   cog
         run: |
               changelog="$(cog changelog --template full_hash "$(git rev-list -n 1 "$(git describe --tags --abbrev=0)").." \
@@ -122,22 +122,28 @@ jobs:
                   "$(git describe --tags --abbrev=0 "$(git describe --tags --abbrev=0)"^)..$(git describe --tags --abbrev=0)"))"
               {
                 echo "changelog<<EOF"
+                if [ -f "RELEASE_NOTES.pre.md" ]; then
+                  sed s/"EOF"//g RELEASE_NOTES.pre.md
+                fi
                 echo "${changelog/EOF/}"
+                if [ -f "RELEASE_NOTES.md" ]; then
+                  sed s/"EOF"//g RELEASE_NOTES.md
+                fi
                 echo EOF
               } >> "$GITHUB_OUTPUT"
               unset changelog
 
-  publish-changelog:
+  publish-release:
     permissions:
       contents: write      # action-gh-release (write)
     name: "Create GitHub release and publish changelog"
     runs-on: ubuntu-latest
-    needs: generate-changelog
+    needs: generate-releasenotes
     steps:
       - name: Create release
         uses: softprops/action-gh-release@master
         with:
-          body: "${{ needs.generate-changelog.outputs.changelog }}"
+          body: "${{ needs.generate-releasenotes.outputs.changelog }}"
 
   build-and-upload:
     permissions:
@@ -146,7 +152,7 @@ jobs:
       attestations: write  # attest-build-provenance
     name: "Compile and upload artifact"
     runs-on: ubuntu-latest
-    needs: ["publish-changelog", "calculate-matrix"]
+    needs: ["publish-release", "calculate-matrix"]
     strategy:
       fail-fast: false
       matrix:
