--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -185,10 +185,13 @@ jobs:
               {
                 echo "ARG CROSS_BASE_IMAGE"
                 echo "FROM \$CROSS_BASE_IMAGE"
-                echo "RUN apt-get update && apt-get install --yes reprotest"
+                echo "RUN apt-get install --yes reprotest sudo"
+                echo "RUN useradd --create-home --user-group guest"
+                echo "RUN echo ALL ALL=(ALL:ALL) NOPASSWD: ALL | sudo tee /etc/sudoers.d/reprotest"
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" cross-util run "--target=$TARGET" -- \
-                "reprotest \"cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\"\" \
+                "reprotest --variations=user_group.available+=guest:guest,domain_host.use_sudo=1 \
+                \"cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\"\" \
                 \"target/${TARGET}/release/${BINARY}\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
               if [ -f REPRODUCIBLE ]; then
                 echo "REPRODUCIBLE=true" >> "$GITHUB_ENV"
