--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -186,7 +186,7 @@ jobs:
                 echo "ARG CROSS_BASE_IMAGE"
                 echo "FROM \$CROSS_BASE_IMAGE"
                 echo "RUN apt-get update >/dev/null 2>&1"
-                echo "RUN apt-get install --yes reprotest sudo >/dev/null 2>&1"
+                echo "RUN apt-get install --yes reprotest diffoscope sudo >/dev/null 2>&1"
                 echo "RUN useradd --create-home --user-group guest"
                 echo "RUN echo 'ALL ALL=(ALL:ALL) NOPASSWD: ALL' | sudo tee /etc/sudoers.d/reprotest"
               } >> "$dockerfile"
