--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -191,7 +191,7 @@ jobs:
                 echo "RUN echo 'ALL ALL=(ALL:ALL) NOPASSWD: ALL' | sudo tee /etc/sudoers.d/reprotest"
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" cross-util run "--target=$TARGET" -- \
-                "reprotest --vary=user_group.available+=guest:guest,domain_host.use_sudo=1 \
+                "reprotest --vary=user_group.available+=guest:guest,domain_host.use_sudo=1,-kernel \
                 \"cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\"\" \
                 \"target/${TARGET}/release/${BINARY}\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
               if [ -f REPRODUCIBLE ]; then
