--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -193,7 +193,8 @@ jobs:
                 echo "RUN apt-get update >/dev/null 2>&1"
                 echo "RUN apt-get install --yes reprotest diffoscope sudo >/dev/null 2>&1"
                 echo "RUN useradd --create-home --user-group guest"
-                echo "RUN useradd --non-unique --uid \"$(id --user)\" --user-group --gid \"$(id --group)\" \"$(id --user --name)\" "
+                echo "RUN groupadd --gid \"$(id --group)\" --non-unique \"$(id --group --name)\""
+                echo "RUN useradd --non-unique --uid \"$(id --user)\" --gid \"$(id --group)\" \"$(id --user --name)\" "
                 echo "RUN echo 'ALL ALL=(ALL:ALL) NOPASSWD: ALL' | sudo tee /etc/sudoers.d/reprotest"
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" CROSS_CONTAINER_UID=0 CROSS_CONTAINER_GID=0 cross-util run "--target=$TARGET" -- \
