--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -198,7 +198,7 @@ jobs:
                 echo "RUN echo 'ALL ALL=(ALL:ALL) NOPASSWD: ALL' | sudo tee /etc/sudoers.d/reprotest"
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" CROSS_CONTAINER_UID=0 CROSS_CONTAINER_GID=0 cross-util run "--target=$TARGET" -- \
-                "reprotest \"--verbosity=$REPROTEST_VERBOSE\" --vary=user_group.available+=guest:guest,domain_host.use_sudo=1 \
+                "reprotest \"--verbosity=$REPROTEST_VERBOSE\" --vary=+all,user_group.available+=guest:guest,domain_host.use_sudo=1,-kernel,-aslr \
                 \"cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\"\" \
                 \"target/${TARGET}/release/${BINARY}*\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
               if [ -f REPRODUCIBLE ]; then
