--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -191,14 +191,11 @@ jobs:
                 echo "ARG CROSS_BASE_IMAGE"
                 echo "FROM \$CROSS_BASE_IMAGE"
                 echo "RUN apt-get update >/dev/null 2>&1"
-                echo "RUN apt-get install --yes reprotest diffoscope sudo >/dev/null 2>&1"
-                echo "RUN useradd --create-home --user-group guest"
-                echo "RUN groupadd --gid \"$(id --group)\" --non-unique \"$(id --group --name)\""
-                echo "RUN useradd --non-unique --uid \"$(id --user)\" --gid \"$(id --group)\" \"$(id --user --name)\" "
-                echo "RUN echo 'ALL ALL=(ALL:ALL) NOPASSWD: ALL' | sudo tee /etc/sudoers.d/reprotest"
+                echo "RUN apt-get install --yes reprotest diffoscope >/dev/null 2>&1"
+                echo "RUN ln -sf /usr/bin/true /usr/bin/setarch" # Stub setarch as it doesn't work in docker
               } >> "$dockerfile"
-              CROSS_BUILD_DOCKERFILE="$dockerfile" CROSS_CONTAINER_UID=0 CROSS_CONTAINER_GID=0 cross-util run "--target=$TARGET" -- \
-                "reprotest \"--verbosity=$REPROTEST_VERBOSE\" --vary=+all,user_group.available+=guest:guest,domain_host.use_sudo=1,-kernel,-aslr \
+              CROSS_BUILD_DOCKERFILE="$dockerfile" cross-util run "--target=$TARGET" -- \
+                "reprotest \"--verbosity=$REPROTEST_VERBOSE\" \
                 \"cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\"\" \
                 \"target/${TARGET}/release/${BINARY}*\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
               if [ -f REPRODUCIBLE ]; then
