--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -194,10 +194,9 @@ jobs:
                 echo "RUN apt-get install --yes reprotest diffoscope >/dev/null 2>&1"
                 # Stub setarch as it doesn't work in docker
                 echo "RUN echo '#!/bin/sh' > /usr/bin/setarch"
-                echo "RUN echo 'while [ \"\${1##-*}\" == \"\" ]; do shift; done' >> /usr/bin/setarch"
+                echo "RUN echo 'shift; while [ \"\${1##-*}\" = \"\" ] && [ \"\$1\" != \"\" ]; do shift; done' >> /usr/bin/setarch"
                 echo "RUN echo 'exec \"\$@\"' >> /usr/bin/setarch"
                 echo "RUN chmod +x /usr/bin/setarch"
-                echo "RUN cat /usr/bin/setarch"
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" cross-util run "--target=$TARGET" -- \
                 "reprotest \"--verbosity=$REPROTEST_VERBOSE\" \
