fix(reprotest): Do not remove top folder to avoid permission error

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -205,7 +205,7 @@ jobs:
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" cross-util run "--target=$TARGET" -- \
                 "reprotest \"--verbosity=$REPROTEST_VERBOSE\" \
-                \"rm -rf /target && cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\" && find /target -name "*.d" -delete\" \
+                \"rm -rf /target/* && cargo build --release \\\"--target=$TARGET\\\" \\\"--package=$BINARY\\\" && find /target -name "*.d" -delete\" \
                 \"/target/${TARGET}/release/${BINARY}*\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
               if [ -f REPRODUCIBLE ]; then
                 echo "REPRODUCIBLE=true" >> "$GITHUB_ENV"
