--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -206,6 +206,7 @@ jobs:
             cp -rvf /target ./target
           RELEASE_PATH_GLOB: "target/${{ matrix.target }}/release/${{ inputs.binary-name }}*"
         run: |
+              echo 1 > /proc/sys/kernel/unprivileged_userns_clone
               dockerfile="$(mktemp)"
               echo "$SETARCH_STUB" > setarch
               {
