--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -190,6 +190,7 @@ jobs:
           CARGO_TERM_VERBOSE: "${{ inputs.cargo-verbose }}"
           REPROTEST_VERBOSE: "${{ inputs.reprotest-verbose }}"
           FAIL_IF_UNREPRODUCIBLE: "${{ inputs.fail-if-unreproducible }}"
+          REPROTEST_VARIATIONS: "-all,+environment,+build_path,+num_cpus"
           SETARCH_STUB: |
             #!/bin/sh
             # Remove arch
@@ -217,7 +218,7 @@ jobs:
               } >> "$dockerfile"
               CROSS_BUILD_DOCKERFILE="$dockerfile" CROSS_CONTAINER_OPTS="--privileged --security-opt=no-new-privileges:false --security-opt seccomp=unconfined --security-opt apparmor=unconfined" \
                 cross-util run "--target=$TARGET" -- \
-                  "reprotest \"--verbosity=$REPROTEST_VERBOSE\" --vary=-user_group,-domain_host \"$REPROTEST_CMD\" \"$RELEASE_PATH_GLOB\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
+                  "reprotest \"--verbosity=$REPROTEST_VERBOSE\" \"--veriations=$REPROTEST_VARIATIONS\" \"$REPROTEST_CMD\" \"$RELEASE_PATH_GLOB\" && touch REPRODUCIBLE || touch NONREPRODUCIBLE"
               if [ -e ./target ]; then
                 cp -rvf ./target/* /target/
               fi
